# Smol-RL

./: README.md  pyproject.toml
configs/: dapo_qwen3.yaml  grpo_qwen3.yaml
src/smol-rl/: __init__.py  cli.py  config.py
src/smol-rl/algorithms/: __init__.py  base.py  dapo.py  grpo.py
src/smol-rl/data/: __init__.py  buffer.py  experience.py  prompts.py
src/smol-rl/rewards/: __init__.py  base.py  composite.py  format.py  math_verify.py
src/smol-rl/rollout/: __init__.py  vllm_rollout.py
src/smol-rl/training/: train.py
src/smol-rl/utils/: __init__.py  seed.py
